Fixed closures (by using shared_ptr to manage env memory) and moved UserFunction to own file

--- a/src/lox/CMakeLists.txt
+++ b/src/lox/CMakeLists.txt
@@ -20,6 +20,8 @@ set(LOX_SOURCE
     Environment.cpp
     Environment.h
     LoxVal.h
+    UserFunction.h
+    UserFunction.cpp
 )
 
 add_library(lox_lib ${LOX_SOURCE})
